--- a/climate_analysis.ipynb
+++ b/climate_analysis.ipynb
@@ -424,12 +424,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(62.0, 69.57142857142857, 74.0)]\n"
+     ]
+    }
+   ],
    "source": [
     "# Write a function called `calc_temps` that will accept start date and end date in the format '%Y-%m-%d' \n",
-    "# and return the minimum, average, and maximum temperatures for that range of dates\n"
+    "# and return the minimum, average, and maximum temperatures for that range of dates\n",
+    "def calc_temp(start_date, end_date):\n",
+    "    return session.query(func.min(Measurement.tobs), func.avg(Measurement.tobs), func.max(Measurement.tobs)).\\\n",
+    "        filter(Measurement.date >= start_date).filter(Measurement.date <= end_date).all()\n",
+    "\n",
+    "print(calc_temp('2012-02-28', '2012-03-05'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(73.0,), (74.0,), (73.0,), (67.0,), (71.0,), (72.0,), (67.0,), (71.0,), (72.0,), (72.0,), (67.0,), (70.0,), (70.0,), (65.0,), (69.0,), (70.0,), (69.0,), (71.0,), (66.0,), (73.0,), (73.0,), (70.0,), (74.0,), (74.0,), (71.0,), (65.0,), (65.0,), (62.0,), (72.0,), (73.0,), (73.0,), (68.0,), (73.0,), (73.0,), (67.0,), (70.0,), (70.0,), (71.0,), (68.0,), (71.0,), (69.0,), (65.0,), (66.0,), (74.0,), (74.0,), (73.0,), (72.0,), (66.0,), (64.0,), (69.0,), (69.0,), (67.0,), (66.0,), (66.0,), (67.0,), (64.0,)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write a function called `calc_temps` that will accept start date and end date in the format '%Y-%m-%d' \n",
+    "# and return the minimum, average, and maximum temperatures for that range of dates\n",
+    "def calc_temp1(start_date, end_date):\n",
+    "    return session.query(Measurement.tobs).\\\n",
+    "        filter(Measurement.date >= start_date).filter(Measurement.date <= end_date).all()\n",
+    "\n",
+    "print(calc_temp1('2012-02-28', '2012-03-05'))"
    ]
   },
   {
